// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`multiple distribution in basic use 1`] = `
Object {
  "classified": Object {
    "x10": Array [
      0,
    ],
    "x11": Array [
      0,
    ],
    "x12": Array [
      0,
    ],
    "x13": Array [
      0,
    ],
    "x14": Array [
      0,
    ],
    "x15": Array [
      0,
    ],
    "x2": Array [
      0,
      4,
      6,
      8,
      10,
      12,
      14,
    ],
    "x3": Array [
      0,
      6,
      9,
      12,
      15,
    ],
    "x4": Array [
      0,
      8,
      12,
    ],
    "x5": Array [
      0,
      10,
      15,
    ],
    "x6": Array [
      0,
      12,
    ],
    "x7": Array [
      0,
      14,
    ],
    "x8": Array [
      0,
    ],
    "x9": Array [
      0,
    ],
  },
  "unclassified": Array [
    1,
    2,
    3,
    5,
    7,
    11,
    13,
  ],
}
`;

exports[`multiple distribution with specified duplicationChecker 1`] = `
Object {
  "classified": Object {
    "x10": Array [
      ValueCarrier {
        "value": 0,
      },
    ],
    "x11": Array [
      ValueCarrier {
        "value": 0,
      },
    ],
    "x12": Array [
      ValueCarrier {
        "value": 0,
      },
    ],
    "x13": Array [
      ValueCarrier {
        "value": 0,
      },
    ],
    "x14": Array [
      ValueCarrier {
        "value": 0,
      },
    ],
    "x15": Array [
      ValueCarrier {
        "value": 0,
      },
    ],
    "x2": Array [
      ValueCarrier {
        "value": 0,
      },
      ValueCarrier {
        "value": 4,
      },
      ValueCarrier {
        "value": 6,
      },
      ValueCarrier {
        "value": 8,
      },
      ValueCarrier {
        "value": 10,
      },
      ValueCarrier {
        "value": 12,
      },
      ValueCarrier {
        "value": 14,
      },
    ],
    "x3": Array [
      ValueCarrier {
        "value": 0,
      },
      ValueCarrier {
        "value": 6,
      },
      ValueCarrier {
        "value": 9,
      },
      ValueCarrier {
        "value": 12,
      },
      ValueCarrier {
        "value": 15,
      },
    ],
    "x4": Array [
      ValueCarrier {
        "value": 0,
      },
      ValueCarrier {
        "value": 8,
      },
      ValueCarrier {
        "value": 12,
      },
    ],
    "x5": Array [
      ValueCarrier {
        "value": 0,
      },
      ValueCarrier {
        "value": 10,
      },
      ValueCarrier {
        "value": 15,
      },
    ],
    "x6": Array [
      ValueCarrier {
        "value": 0,
      },
      ValueCarrier {
        "value": 12,
      },
    ],
    "x7": Array [
      ValueCarrier {
        "value": 0,
      },
      ValueCarrier {
        "value": 14,
      },
    ],
    "x8": Array [
      ValueCarrier {
        "value": 0,
      },
    ],
    "x9": Array [
      ValueCarrier {
        "value": 0,
      },
    ],
  },
  "unclassified": Array [
    ValueCarrier {
      "value": 1,
    },
    ValueCarrier {
      "value": 2,
    },
    ValueCarrier {
      "value": 3,
    },
    ValueCarrier {
      "value": 5,
    },
    ValueCarrier {
      "value": 7,
    },
    ValueCarrier {
      "value": 11,
    },
    ValueCarrier {
      "value": 13,
    },
    ValueCarrier {
      "value": 1,
    },
    ValueCarrier {
      "value": 2,
    },
    ValueCarrier {
      "value": 3,
    },
    ValueCarrier {
      "value": 5,
    },
    ValueCarrier {
      "value": 7,
    },
    ValueCarrier {
      "value": 11,
    },
    ValueCarrier {
      "value": 13,
    },
    ValueCarrier {
      "value": 1,
    },
    ValueCarrier {
      "value": 2,
    },
    ValueCarrier {
      "value": 3,
    },
    ValueCarrier {
      "value": 5,
    },
    ValueCarrier {
      "value": 7,
    },
    ValueCarrier {
      "value": 11,
    },
    ValueCarrier {
      "value": 13,
    },
  ],
}
`;

exports[`single distribution in basic use 1`] = `
Object {
  "Ring(4, 0)": Array [
    0,
    4,
    8,
    12,
  ],
  "Ring(4, 1)": Array [
    1,
    5,
    9,
    13,
  ],
  "Ring(4, 2)": Array [
    2,
    6,
    10,
    14,
  ],
  "Ring(4, 3)": Array [
    3,
    7,
    11,
    15,
  ],
}
`;

exports[`single distribution with specified duplicationChecker 1`] = `
Object {
  "Ring(4, 0)": Array [
    ValueCarrier {
      "value": 0,
    },
    ValueCarrier {
      "value": 4,
    },
    ValueCarrier {
      "value": 8,
    },
    ValueCarrier {
      "value": 12,
    },
  ],
  "Ring(4, 1)": Array [
    ValueCarrier {
      "value": 1,
    },
    ValueCarrier {
      "value": 5,
    },
    ValueCarrier {
      "value": 9,
    },
    ValueCarrier {
      "value": 13,
    },
  ],
  "Ring(4, 2)": Array [
    ValueCarrier {
      "value": 2,
    },
    ValueCarrier {
      "value": 6,
    },
    ValueCarrier {
      "value": 10,
    },
    ValueCarrier {
      "value": 14,
    },
  ],
  "Ring(4, 3)": Array [
    ValueCarrier {
      "value": 3,
    },
    ValueCarrier {
      "value": 7,
    },
    ValueCarrier {
      "value": 11,
    },
    ValueCarrier {
      "value": 15,
    },
  ],
}
`;
